hphp/test/zend/good/ext/gd/tests/jpeg2wbmp_error3.php.skipif
<?php 
if(!extension_loaded('gd')) {
    die('skip gd extension is not loaded');
}
if(!function_exists('jpeg2wbmp')) {
    die('skip jpeg2wbmp function is not available');
}
?>