hphp/test/zend/bad/ext/gd/tests/imagecolorstotal_error.php.skipif
<?php
if(!extension_loaded('gd')) {
    die('skip gd extension is not loaded');
}
if(!function_exists('imagecolorstotal')) {
    die('skip imagecolorstotal function is not available');
}
?> 